S302T300-220 #time 5h implemented autocomplete dropdown - also fixed related styling issues that arose with the change such as button colour, background not showing up and others.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -22,6 +22,12 @@ h3 {
   cursor: pointer;
 }
 
+.theme--light.v-application {
+  // Vuetify overrides background, so disable this
+  background: initial;
+  background-color: initial;
+}
+
 .green-text-hover {
   color:$dark;
 }
